sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: value && is not a member of Int
  	for(i <- n-1 && plusPetit(i+1,i)){
                     ^